randomised card discarding